@@ -1,4 +1,11 @@
+2010-06-20 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCCmain.c, src/pic/main.c, src/pic16/main.c:
+	  fixed bug #3015137: -c -o not working as expected (caused by fix for
+          #2951083)
+
 2010-06-19 Borut Razem <borut.razem AT siol.net>
+
 	* device/include/pic/pic14devices.txt,
 	  device/include/pic16/pic16devices.txt:
 	  license changed to GPL - files are not part of sdcc library
